[workspace]

members = [
    "gearley",
    "gearley-recognizer",
    "gearley-grammar",
    "gearley-default-grammar",
    "gearley-forest",
    "compact-bocage",
    "simple-bocage",
    "gearley-utils",
    "gearley-example-grammars",
]

exclude = [
    "gearley-wasm"
]

resolver = "2"

# add debug info for profiling
[profile.release]
debug = true

[workspace.dependencies]
cfg-symbol = { path = "../cfg/cfg-symbol/", features = ["miniserde"] }
cfg = { path = "../cfg/cfg/", features = ["miniserde"] }
bit-matrix = { version = "0.8.1", features = ["miniserde", "memusage"] }
