[workspace]

members = [
    "gearley",
    "gearley-recognizer",
    "gearley-grammar",
    "gearley-default-grammar",
    "gearley-forest",
    "compact-bocage",
    "simple-bocage",
    "gearley-utils",
    "gearley-example-grammars",
]

exclude = [
    "gearley-wasm"
]

resolver = "2"

# add debug info for profiling
[profile.release]
debug = true

[workspace.dependencies]
cfg-symbol = { path = "../cfg/cfg-symbol/" }
cfg = { path = "../cfg/cfg/" }
bit-matrix = { version = "0.9.0", features = ["miniserde", "serde"] }
miniserde = { version = "0.1" }
