[package]
name = "compact-bocage"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cfg-symbol = { path = "../../cfg/cfg-symbol/" }
bit-vec = "0.8"
gearley-forest = { path = "../gearley-forest/" }
gearley-vec2d = { path = "../gearley-vec2d/" }
gearley-grammar = { path = "../gearley-grammar/" }
linked-list = "0.1.0"
bumpalo = { version = "3.19", features = ["allocator-api2"] }
allocator-api2 = "0.2.21"
bytemuck = "1.23.2"
