[package]
name = "gearley-default-grammar"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gearley-grammar = { path = "../gearley-grammar/" }
gearley-vec2d = { path = "../gearley-vec2d/" }
cfg = { path = "../../cfg/cfg/" }
cfg-earley-history = { path = "../../cfg/cfg-earley-history/" }
bit-matrix = { workspace = true }
cfg-symbol = { workspace = true }
miniserde = "0.1"
