[package]
name = "gearley-grammar"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bit-matrix = "0.7"
cfg-symbol = { path = "../../cfg/cfg-symbol/", features = ["serialize"] }
serde = "1.0"
serde_derive = "1.0"
