[package]
name = "gearley-grammar"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bit-matrix = { workspace = true }
cfg-symbol = { workspace = true }
cfg-history = { path = "../../cfg/cfg-history/", version = "0.0.1" }
serde = { version = "1.0", features = ["derive"], optional = true }
miniserde = "0.1"
