[package]
name = "gearley-parse"
version = "0.1.0"
edition = "2024"

[dependencies]
log = "0.4"
gearley-forest = { path = "../gearley-forest/" }
gearley-grammar = { path = "../gearley-grammar/" }
gearley-recognizer = { path = "../gearley-recognizer/" }
simple-bocage = { path = "../simple-bocage/", optional = true }

[dev-dependencies]
gearley-default-grammar = { path = "../gearley-default-grammar/" }
env_logger = "0.11"
cfg = { path = "../../cfg/cfg/", version = "0.9.0" }

[features]
default = ["simple-bocage"]
