[package]
name = "gearley-recognizer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gearley-vec2d = { path = "../gearley-vec2d/" }
gearley-forest = { path = "../gearley-forest/" }
gearley-grammar = { path = "../gearley-grammar/" }
cfg-symbol = { workspace = true }
bit-matrix = { workspace = true }
memusage = { version = "0.2.0", optional = true }
