[package]
name = "gearley-recognizer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gearley-vec2d = { version = "0.1", path = "../gearley-vec2d/" }
gearley-forest = { path = "../gearley-forest/" }
gearley-grammar = { path = "../gearley-grammar/" }
cfg-symbol = { workspace = true }
bit-matrix = { workspace = true }
log = { version = "0.4", optional = true }
