[package]
name = "gearley-vec2d"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", optional = true }
serde_derive = { version = "1.0", optional = true }
miniserde = { version = "0.1", optional = true }

[features]
default = ["miniserde"]
serde = ["dep:serde", "dep:serde_derive"]
