[package]
name = "gearley-wasm"
version = "0.1.0"
authors = ["peterb"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]
console_error_panic_hook = []

[dependencies]
wasm-bindgen = "0.2.84"
log = "0.4"
once_cell = "1.21"

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
# console_error_panic_hook = { version = "0.1.7", optional = true }
cfg-if = "1.0"
talc = { version = "4.4.2", default-features = false, features = ["lock_api"] }
spin = { version = "0.9.8", default-features = false, features = ["lock_api", "spin_mutex"] }

cfg-load = { path = "../../cfg/cfg-load/", version = "0.0.1" }
cfg-grammar = { path = "../../cfg/cfg-grammar/", version = "0.0.1" }
gearley = { path = "../gearley/", version = "0.1.0", features = ["log"] }

[dev-dependencies]
wasm-bindgen-test = "0.3.34"

[profile.dev]
debug = true

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
debug = true
