[package]
name = "gearley"
version = "0.0.5"

authors = [ "Piotr Czarnecki <pioczarn@gmail.com>" ]
description = "An Earley parser engine."
keywords = ["grammar", "parsing", "language", "forest", "intersection"]
documentation = "http://pczarn.github.io/gearley/"
repository = "https://github.com/pczarn/gearley"
license = "MIT/Apache-2.0"
edition = "2021"

[profile.release]
debug = true

[lib]
name = "gearley"

[dependencies]
cfg-symbol = { version = "0.0", features = ["serialize"], path = "../../cfg/cfg-symbol/" }
bit-matrix = { version = "0.7.1", features = ["serialize", "memusage"] }
bit-vec = "0.6"
serde = "1.0"
serde_derive = "1.0"
memusage = { version = "0.2.0", optional = true }
gearley-forest = { path = "../gearley-forest/" }
gearley-grammar = { path = "../gearley-grammar/" }

[dev-dependencies]
c_lexer_logos = "0.1.1"
log = "0.4"
env_logger = "0.7"
