[package]
name = "gearley"
version = "0.1.0"

authors = [ "Piotr Czarnecki <pioczarn@gmail.com>" ]
description = "An Earley parser engine."
keywords = ["grammar", "parsing", "language", "forest", "intersection"]
documentation = "http://pczarn.github.io/gearley/"
repository = "https://github.com/pczarn/gearley"
license = "MIT/Apache-2.0"
edition = "2021"

[lib]
name = "gearley"

[dependencies]
cfg-symbol = { workspace = true }
bit-matrix = { workspace = true }
bit-vec = "0.6"
serde = "1.0"
serde_derive = "1.0"
memusage = { version = "0.2.0", optional = true }
gearley-forest = { path = "../gearley-forest/" }
gearley-grammar = { path = "../gearley-grammar/" }
gearley-recognizer = { path = "../gearley-recognizer/" }
gearley-default-grammar = { path = "../gearley-default-grammar/", optional = true }
simple-bocage = { path = "../simple-bocage/", optional = true }

[dev-dependencies]
c_lexer_logos = "0.1.1"
log = "0.4"
env_logger = "0.7"
cfg = { path = "../../cfg/cfg/" }

[features]
default = ["gearley-default-grammar", "simple-bocage"]
memusage = ["dep:memusage", "gearley-forest/memusage", "gearley-recognizer/memusage"]
