[package]
name = "simple-bocage"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cfg-symbol = { path = "../../cfg/cfg-symbol/" }
bit-vec = "0.6"
gearley-forest = { path = "../gearley-forest/" }
gearley-grammar = { path = "../gearley-grammar/" }
